2015-05-22  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal.c (int e_free): Fix thinko that
	caused resource leak.

2015-03-20  Mateusz Kaczanowski  <kaczanowski.mateusz@gmail.com>

	* src/e-lib/src/e_mem_read.c (void *e_read): Add src to base.
	* src/e-lib/src/e_mem_write.c (void *e_write): Add dst to
	base.

2015-01-29  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal.c (static int
	disable_nsw_elinks): Insert delays between write to E_SYS_*
	registers.
	(static int enable_clock_gating): Likewise.
	(int e_reset_system): Likewise.

2015-01-23  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal.c (static int
	disable_nsw_elinks): Created. This function disables the
	north, south, and west eLinks.
	(int e_reset_system): Call disable_nsw_elinks().


2015-01-23  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal.c (int ee_disable_system): Also
	disable TX and RX.

2015-01-16  Yoshifuji Naoki <lwisteria.ao@gmail.com>

	* src/e-loader/src/e-loader.c: Make 'executable' argument const
	to suppress warnings.
	* src/e-loader/src/e-loader.h: Likewise.
	* src/e-loader/src/e-process-SREC.c: Likewise.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-shm-manager.c (int e_shm_init): Add
	missing newlines.
	(static int shm_table_sanity_check): Likewise.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-shm-manager.c (int e_shm_init): Lower
	the severity for select SHM error reports.
	(static int shm_table_sanity_check): Likewise.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal-data.h: Be more explicit about
	bitfield members' width.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-utils/e-read/src/e-read.c (int main): Call
	e_reset_system() before accessing Epiphany chip.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-utils/e-write/src/e-write.c (int main): Call
	e_reset_system() before writing to Epiphany chip.
